; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_cavsdsp.c_cavs_filter_lh_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_cavsdsp.c_cavs_filter_lh_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32, i32, i32)* @cavs_filter_lh_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cavs_filter_lh_c(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %16 = load i32, i32* %13, align 4
  %17 = icmp eq i32 %16, 2
  br i1 %17, label %18, label %35

18:                                               ; preds = %7
  store i32 0, i32* %15, align 4
  br label %19

19:                                               ; preds = %31, %18
  %20 = load i32, i32* %15, align 4
  %21 = icmp slt i32 %20, 16
  br i1 %21, label %22, label %34

22:                                               ; preds = %19
  %23 = load i32*, i32** %8, align 8
  %24 = load i32, i32* %15, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %10, align 4
  %29 = load i32, i32* %11, align 4
  %30 = call i32 @loop_filter_l2(i32* %26, i32 %27, i32 %28, i32 %29)
  br label %31

31:                                               ; preds = %22
  %32 = load i32, i32* %15, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %15, align 4
  br label %19

34:                                               ; preds = %19
  br label %78

35:                                               ; preds = %7
  %36 = load i32, i32* %13, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %56

38:                                               ; preds = %35
  store i32 0, i32* %15, align 4
  br label %39

39:                                               ; preds = %52, %38
  %40 = load i32, i32* %15, align 4
  %41 = icmp slt i32 %40, 8
  br i1 %41, label %42, label %55

42:                                               ; preds = %39
  %43 = load i32*, i32** %8, align 8
  %44 = load i32, i32* %15, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %43, i64 %45
  %47 = load i32, i32* %9, align 4
  %48 = load i32, i32* %10, align 4
  %49 = load i32, i32* %11, align 4
  %50 = load i32, i32* %12, align 4
  %51 = call i32 @loop_filter_l1(i32* %46, i32 %47, i32 %48, i32 %49, i32 %50)
  br label %52

52:                                               ; preds = %42
  %53 = load i32, i32* %15, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %15, align 4
  br label %39

55:                                               ; preds = %39
  br label %56

56:                                               ; preds = %55, %35
  %57 = load i32, i32* %14, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %77

59:                                               ; preds = %56
  store i32 8, i32* %15, align 4
  br label %60

60:                                               ; preds = %73, %59
  %61 = load i32, i32* %15, align 4
  %62 = icmp slt i32 %61, 16
  br i1 %62, label %63, label %76

63:                                               ; preds = %60
  %64 = load i32*, i32** %8, align 8
  %65 = load i32, i32* %15, align 4
  %66 = sext i32 %65 to i64
  %67 = getelementptr inbounds i32, i32* %64, i64 %66
  %68 = load i32, i32* %9, align 4
  %69 = load i32, i32* %10, align 4
  %70 = load i32, i32* %11, align 4
  %71 = load i32, i32* %12, align 4
  %72 = call i32 @loop_filter_l1(i32* %67, i32 %68, i32 %69, i32 %70, i32 %71)
  br label %73

73:                                               ; preds = %63
  %74 = load i32, i32* %15, align 4
  %75 = add nsw i32 %74, 1
  store i32 %75, i32* %15, align 4
  br label %60

76:                                               ; preds = %60
  br label %77

77:                                               ; preds = %76, %56
  br label %78

78:                                               ; preds = %77, %34
  ret void
}

declare dso_local i32 @loop_filter_l2(i32*, i32, i32, i32) #1

declare dso_local i32 @loop_filter_l1(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
